crates/ir/tests/snapshots/lower_test__resources__resource_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module resources__resource_basic

type Handle = MkHandle#0(String)
instance core/resource.Resource[Handle] { close=Resource$$Handle$$close }
extern java "krypton.runtime.KryptonIO" println(Object): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (Object) -> Unit

fn main() -> Unit =
  let v0: ~Handle = construct Handle::MkHandle#0("test")
  let v1: Unit = call println("opened")
  let v2: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
  let v3: Unit = trait_call core/resource.Resource.close(v2, v0)
  v1

fn Resource$$Handle$$close(v4: ~Handle) -> Unit =
  let v5: Unit = call println("closed")
  v5
