crates/ir/tests/snapshots/lower_test__resources__resource_indirect_consume.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module resources__resource_indirect_consume

type Handle = MkHandle#0(String)
instance core/resource.Resource[Handle] { close=Resource$$Handle$$close }
extern java "krypton.runtime.KryptonIO" println(d8) -> Unit
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (d8) -> Unit

fn use_handle(v0: ~Handle) -> Unit =
  let v1: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
  let v2: Unit = trait_call core/resource.Resource.close(v1, v0)
  v2

fn main() -> Unit =
  let v3: ~Handle = construct Handle::MkHandle#0("test")
  let v4: Unit = call println("opened")
  let v5: Unit = call use_handle(v3)
  v5

fn Resource$$Handle$$close(v6: ~Handle) -> Unit =
  let v7: Unit = call println("closed")
  v7
