crates/ir/tests/snapshots/lower_test__resources__resource_recur.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module resources__resource_recur

type Handle = MkHandle#0(Int)
declare lt: (Dict, h, h) -> Bool
declare println: (m) -> Unit

fn loop(v0: Int) -> Unit =
  let_join v1(v2: Int) =
    let_join v11(v6: Bool) =
      switch v6 {
        1 ->
          let v7: Unit = call println("done")
          v7
        _ ->
          let v8: ~Handle = construct Handle::MkHandle#0(v2)
          let v9: Unit = call println("iter")
          let v10: Int = add_int(v2, 1)
          jump v1(v10)
      }
    in
    let v3: Dict = get_dict Ord[Int]
    let v4: Bool = call lt(v3, v2, 3)
    let v5: Bool = not(v4)
    jump v11(v5)
  in
  jump v1(v0)

fn main() -> Unit =
  let v12: Unit = call loop(0)
  v12
